[package]
name = "naday"
version = "0.1.0"
authors = ["Christian Reiniger <creinig@creinig.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
chrono = "0.4"
directories = "3.0"
env_logger = "0.8.2"
itertools = "0.10.0"
lazy_static = "1.4.0"
log = "0.4"
regex = "1"

[dev-dependencies]
tempfile = "3.1.0"

[profile.release]
opt-level = 3
debug = false
lto = true
panic = "unwind"
