[package]
name = "naday"
version = "0.1.0"
authors = ["Christian Reiniger <creinig@creinig.de>"]
repository = "https://github.com/creinig/naday.git"
homepage = "https://github.com/creinig/naday"
license = "MIR"
readme = "README-md"
description = "A little tool for tracking (physical) excercise of the 'N repetitions a day' variant - 100 pushups per day, 10.000 steps per day etc."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
chrono = "0.4"
directories = "3.0"
env_logger = "0.8.2"
itertools = "0.10.0"
lazy_static = "1.4.0"
log = "0.4"
regex = "1"

[dev-dependencies]
tempfile = "3.1.0"

[profile.release]
opt-level = 3
debug = false
lto = true
panic = "unwind"
